<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_channel">Download</string>
    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="download_notification_channel_id" translatable="false">download_channel</string>

    <string name="glide_title">Glide - Image Loading Library by BumpTech</string>
    <string name="udacity_title">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_title">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="file_name">File Name:</string>
    <string name="status">Status:</string>
    <string name="ok">OK</string>
    <string name="select_option_message">Please select the file to download</string>
    <string name="success_text">SUCCESS</string>
    <string name="error_text">ERROR</string>
    <string name="cloud_image">cloud image with an arrow down</string>
</resources>
